Ideas
Decrease range of melee cav compared to infantry counterpart, seems like it would be a little harder to maneuver a long spear on a horse.
Melee Champs + .25/5 range? heroes?
Archer/slinger/Jav same run/walk speed?

26.12
Slingers cost changed to 30 wood 20 stone, pierce dmg drop to 11.5 (from 12)
pikeman attack speed increased from 2 seconds to 1.75
what would happen if spear range increased to 4.5 (reduce sword to 2.5 or keep at 3) keeping at 3 for now but increasing spear to 4.5 
Spartan teambonus 2 Infantry +.5 pierce/hack armor, +1 crush.
advanced units 20% (15%) longer to train and -30% (25%) res gathered 
elite units 25% train (20%) -30% gather (25) but 25% health
berries regenerate twice as fast, 1 every 3 seconds instead of 1 every 6
Palisades build time changed 12 to 9, 8 to 6, 18 to 15 10 to 8 14 to 12
1.5 exp trickle added to fortress

Spartiates are now considered "citizens" they get the health bonus p2, p3
removed "citizens" from spartan merce, perioci units and neoadmodes
26.11
Spartans
Spartan rams garrison increased to 15 (rams were first siege engines recorded  (in Assyria) soon to be adopted by sparta) Cost 400 wood no metal, crush dmg reduced by 30% build time 25 instead of 30
Spartan "merc javs" start out with regular jav stats p1 but + 1 pierce and hack resistance, train time reduced to 10 seconds plus rank penalty.  Now can only train from CC, Market in p2
advanced melee dmg bonus increased to 1.15 from 1.10
range added to 1.05 and 2 range
Sparta common javs can no longer promote to merc jav.  Also when training from house cost 50 food instead of 40.  "fertility" for common jav increased 100 food and wood (400/400) but train time reduced moved back to 9 from cc and 25 from hourses
Women train 25 second from houses as well but cost 55 food instead of 50