@@ -1,7 +1,7 @@
 {
     "autoResearch": true,
     "icon": "upgrade_advanced.png",
-    "tooltip": "Mercenary units +10% damage.",
+    "tooltip": "Mercenary units +10% damage, 15% more health.",
     "modifications": [
             { "value": "Attack/Melee/Damage/Hack", "multiply": 1.1, "affects": "Melee" },
             { "value": "Attack/Melee/Damage/Pierce", "multiply": 1.1, "affects": "Melee" },
@@ -9,8 +9,9 @@
             { "value": "Attack/Ranged/Damage/Hack", "multiply": 1.1, "affects": "Ranged" },
             { "value": "Attack/Ranged/Damage/Pierce", "multiply": 1.1, "affects": "Ranged" },
             { "value": "Attack/Ranged/Damage/Crush", "multiply": 1.1, "affects": "Ranged" },
-	    { "value": "Health/Max", "multiply": 1.15, "affects": "Melee" },
-            { "value": "Health/Max", "multiply": 1.15, "affects": "Ranged" }	    
+	    { "value": "Health/Max", "multiply": 1.15, "affects": "Mercanary"},
+	    { "value": "UnitMotion/WalkSpeed", "multiply": 1.02 }
+              
     ],
     "affects": ["Mercenary"]
 }
