@@ -1,7 +1,7 @@
 {
 	"autoResearch": true,
 	"icon": "upgrade_advanced.png",
-	"tooltip": "Advanced units +20% training time, +15% health, +0.5 capture attack strength, +20% loot, and −30% gather speed; Healers +5 healing strength and +3 healing range; Melee unitd 15% attack damage; Ranged units −20% spread, 5% dmg and +2 range.",
+	"tooltip": "Advanced units +20% training time, +15% health, +0.5 capture attack strength, +20% loot, and −30% gather speed, 2% faster runwwalk; Healers +5 healing strength and +3 healing range; Melee unitd 15% attack damage; Ranged units −20% spread, 5% dmg and +2 range.,
 	"modifications": [
 		{ "value": "Attack/Capture/Capture", "add": 0.5 },
 		{ "value": "Attack/Melee/Damage/Hack", "multiply": 1.15, "affects": "Melee" },
@@ -21,7 +21,8 @@
 		{ "value": "Loot/stone", "multiply": 1.2 },
 		{ "value": "Loot/metal", "multiply": 1.2 },
 		{ "value": "Loot/xp", "multiply": 1.2 },
-		{ "value": "ResourceGatherer/BaseSpeed", "multiply": 0.70 }
+		{ "value": "ResourceGatherer/BaseSpeed", "multiply": 0.70 },
+		{ "value": "UnitMotion/WalkSpeed", "multiply": 1.02 }
 	],
 	"affects": ["Advanced Unit", "Elite Unit"]
 }
